# hgol

./: .gitignore  README.md  hgol.cabal
app/: Main.hs
src/: ADT.hs  Lib.hs
