name:                hgol
version:             0.1.0.0
synopsis:            Game of life, in Haskell
description:         Because, why not?
homepage:            https://github.com/al333z/hgol#readme
license:             BSD3
license-file:        LICENSE
author:              Alessandro Zoffoli
maintainer:          alessandrozoffoli@gmail.com
copyright:           2016 Alessandro Zoffoli
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Lib
                    , ADT
  build-depends:      base
                    , parsec
                    , matrix
  default-language:   Haskell2010

executable hgol-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hgol
                     , ansi-terminal
  default-language:    Haskell2010

test-suite hgol-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hgol
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/al333z/hgol
